# VERSO-K1

./: .gitignore  Cargo.toml  db.rs
.github/workflows/: android.yml
src/: db.rs  db.rs.bak  dp.rs  learn.rs  lib.rs  transformer.rs  ui.rs
