[package]
name = "verso-k1"
version = "0.1.0"
edition = "2021"

[dependencies]
android-activity = { version = "0.4.3", features = ["native-activity"] }
khronos-egl = { version = "6.0.0", features = ["static", "no-pkg-config"] }
glow = "0.12"
imgui = "0.11"
imgui-glow-renderer = "0.11"
log = "0.4"
android_logger = "0.13"
ndarray = { version = "0.15", features = ["std"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[package.metadata.android]
permissions = [
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE"
]
label = "VERSO K1"
target_sdk_version = 30
min_sdk_version = 21
features = ["native-activity"]

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
exported = true
meta_data = [
    { name = "android.app.lib_name", value = "verso_k1" }
]
intent_filter = [
    { actions = ["android.intent.action.MAIN"], categories = ["android.intent.category.LAUNCHER"] }
]
